--- a/templates/index.html
+++ b/templates/index.html
@@ -574,6 +574,9 @@
         </a>
     </footer>
     
+    <!-- Production utilities -->
+    <script src="/static/js/production-utils.js"></script>
+    
     <script>
         function escapeHtml(text) {
             const div = document.createElement('div');
