Remove '(Optional)' text from Industry field label

--- a/templates/level1.html
+++ b/templates/level1.html
@@ -697,7 +697,7 @@
                     
                     <div class="form-row">
                         <div class="form-group">
-                            <label class="form-label">Industry (Optional)</label>
+                            <label class="form-label">Industry</label>
                             <input type="text" class="form-input" id="industry" placeholder="e.g., IT, Healthcare, Manufacturing">
                         </div>
                         <div class="form-group">
