--- a/templates/level1.html
+++ b/templates/level1.html
@@ -127,9 +127,10 @@
         }
         
         .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 32px 24px;
+            max-width: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 32px 0;
         }
         
         /* Cards */
@@ -170,6 +171,12 @@
         .card-title i { color: var(--primary); }
         
         .card-body { padding: 24px; }
+        
+        /* Remove side gaps from cards */
+        .card {
+            margin-left: 0;
+            margin-right: 0;
+        }
         
         /* Form Elements */
         .form-group { margin-bottom: 20px; }
